modify time to utc
